[tool.poetry]
name = "ontoenv"
version = "0.1.1"
description = "Manages owl:imports statements for multi-file development"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
rdflib = "^5.0.0"
requests = "^2.25.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ontoenv = "ontoenv:i"
