[tool.poetry]
name = "ontoenv"
version = "0.3.9a1"
description = "Manages owl:imports statements for multi-file development"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^7.0.0"
click = "^8.0.1"
networkx = "^3.2"
requests = "^2.25.1"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
viz = ["matplotlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ontoenv = "ontoenv.cli:i"
